# my_journey

./: .deepsource.toml  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  docker-build.yml  release.yml
app/: commands.py  config.py  database.py  exceptions.py  main.py  middlewares.py  models.py
app/handlers/: base.py  me.py  personal.py  travel.py
app/handlers/admin/: __init__.py  keyboards.py  routes.py  schemas.py  stateforms.py
app/handlers/general/: __init__.py  keyboards.py  routes.py
app/handlers/personal/: __init__.py  keyboards.py  routes.py  stateforms.py
app/handlers/travel/: __init__.py  keyboards.py  routes.py  schemas.py  stateforms.py
app/handlers/welcome/: __init__.py  keyboards.py  routes.py  schemas.py
app/keyboards/: __init__.py  personal.py  schemas.py  travel.py  welcome.py
app/middlewares/: required.py
app/schemas/: __init__.py  geodata.py  keyboard.py  personal.py  statesform.py  travel.py
app/utils/: __init__.py  commands.py  funcs.py  logger.py  returns.py
docs/: environments.md  mypy.md  pdm.md  ruff.md
migrations/: env.py
migrations/versions/: 58a3e5029fa2_user_active.py  801b09ee0b55_user_role.py  82f2c0d925d6_add_nickname_to_user.py  ee8de75d2fec_init_migration.py
