[project]
name = "my_journey"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Dzmitry Zhybryk", email = "mr.zhybryk@gmail.com" },
]

dependencies = [
    "aiogram>=3.3.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "aiohttp>=3.9.3",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "jinja2>=3.1.3",
]

requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.1.13",
    "mypy>=1.8.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
warn_unused_configs = true
check_untyped_defs = true
show_error_context = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true


[tool.pdm]
distribution = "application"
include = [".py"]